[package]
name = "untyped-bytes"
version = "0.1.1"
authors = ["tyler <tyler@brainiumstudios.com>"]
edition = "2018"
description = "A bag of bytes you can put any `Copy` type into."
license = "MIT/Apache-2.0"
repository = "https://github.com/mtak-/untyped-bytes"
homepage = "https://github.com/mtak-/untyped-bytes"
documentation = "https://docs.rs/untyped-bytes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
